# fast_api_sprint

./: pyproject.toml
app/: main.py  views.py
